RESOLVED FIXED227294
REGRESSION(r272882): [WPE][GTK] xdg-dbus-proxy may not be mounted in sandbox
https://bugs.webkit.org/show_bug.cgi?id=227294
Summary REGRESSION(r272882): [WPE][GTK] xdg-dbus-proxy may not be mounted in sandbox
Michael Catanzaro
Reported 2021-06-23 08:26:49 PDT
xdg-dbus-proxy is now sandboxed, but it will only be mounted in the sandbox if it's installed into /usr/bin. If the prefix is anything different, then it won't exist and will fail to launch. Oops.
Attachments
Patch (1.64 KB, patch)
2021-06-23 08:27 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2021-06-23 08:27:41 PDT
EWS
Comment 2 2021-06-24 01:13:17 PDT
Committed r279215 (239101@main): <https://commits.webkit.org/239101@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432044 [details].
Note You need to log in before you can comment on or make changes to this bug.