REGRESSION(r272882): [WPE][GTK] xdg-dbus-proxy may not be mounted in sandbox https://bugs.webkit.org/show_bug.cgi?id=227294

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-06-24
Reviewed by Adrian Perez de Castro.

* UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::bubblewrapSpawn):

Canonical link: https://commits.webkit.org/239101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279215 268f45cc-cd09-0410-ab3c-d52691b4dbfc